--- a/udp2sqlite_sync/Cargo.toml
+++ b/udp2sqlite_sync/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 binrw = "0.15.0"
+clap = { version = "4.5", features = ["derive"] }
 rusqlite = "0.37.0"
